# OpenCVTrialProject

./: CMakeLists.txt  README.md
include/: OpenCVTrialProject.h
src/: OpenCVTrialProject.cpp
